--- a/Examples/UVTimerAsync.csproj
+++ b/Examples/UVTimerAsync.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -9,7 +9,8 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>UVDirectoryAsync</RootNamespace>
     <AssemblyName>UVTimerAsync</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
@@ -35,12 +36,15 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\LibuvSharp\LibuvSharp.csproj">
-      <Project>{281B560A-E3B1-437C-9274-DD655E860E6E}</Project>
-      <Name>LibuvSharp</Name>
-    </ProjectReference>
+    <Compile Include="UVTimerAsync.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UVTimerAsync.cs" />
+    <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LibuvSharp\LibuvSharp.csproj">
+      <Project>{dc71928e-5a67-444d-90e6-81510f2e6f66}</Project>
+      <Name>LibuvSharp</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
